Bug Fixed: There is no activity yet! is not aligned well (TG-93 #ready-for-test)

--- a/src/app/dashboard/projects/list-project/project-item/project-item.component.sass
+++ b/src/app/dashboard/projects/list-project/project-item/project-item.component.sass
@@ -75,6 +75,9 @@ $item-size: 180px
     &:hover
       background-color: transparent
 
+.ps-empty-item
+  padding-top: 25px
+
 .ps-image-caption
   width: 100%
   height: 30px
